# logy

./: .gitignore  AGENTS.md  README.md  alembic.ini  context.md  pyproject.toml
alembic/: env.py
alembic/versions/: c3cbb04ab556_initial_schema.py
apps/cli/: interactive.py  interactive.txt  main.py
apps/cli/commands/: log.py  projects.py  review.py  search.py  serve.py  tui.py
apps/cli/tui/: __init__.py  app.py  flow.py  keys.py  state.py
apps/cli/tui/views/: __init__.py  confirm.py  entry_detail.py  entry_list.py  input.py  picker.py  ui.py  welcome.py
apps/server/: main.py
apps/server/api/: entries.py  graph.py  projects.py
apps/server/schemas/: __init__.py  entries.py  projects.py
apps/server/workers/: __init__.py  enrichment.py
apps/tui/: app.py
apps/tui/screens/: history.py  home.py  log.py  projects.py  search.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js
apps/web/src/: App.jsx  index.css
apps/web/src/components/: Layout.jsx
apps/web/src/pages/: Graph.jsx  Search.jsx
docs/superpowers/specs/: 2026-06-28-welcome-screen-redesign-design.md
tests/: seed_db.py
tests/test_api/: test_endpoints.py
tests/test_cli/: test_tui_scroll.py
tests/test_database/: test_repository.py
